--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "node-stream-zip": "^1.15.0",
     "puppeteer": "^19.4.1",
     "string-similarity": "^4.0.4",
-    "@zhea55/crack-tencent-captcha": "zhea55/crack-tencent-captcha"
+    "@zhea55/crack-tencent-captcha": "../crack-tencent-captcha"
   },
   "devDependencies": {
     "rome": "^11.0.0"
